--- a/UserWebApp/src/main/resources/application.properties
+++ b/UserWebApp/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/db_users
+spring.datasource.username=root
+spring.datasource.password=alejandra11
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
